[gd_scene load_steps=12 format=3 uid="uid://drmj7djw2jdo2"]

[ext_resource type="Script" path="res://scenes/cutscenes/endings/ending1-22.gd" id="1_5bcd2"]
[ext_resource type="Texture2D" uid="uid://bhdgf61l8aswk" path="res://assets/cutscene/Group photo resolution 1080.png" id="2_be3s6"]

[sub_resource type="Animation" id="Animation_46lkm"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_plrt8"]
_data = {
"fade_in": SubResource("Animation_46lkm")
}

[sub_resource type="Animation" id="Animation_7fwaa"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2jj2k"]
_data = {
"fade_out": SubResource("Animation_7fwaa")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_26vn8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fbxi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lsngp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkqiy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mb80y"]

[node name="ending1-22" type="Node2D"]
script = ExtResource("1_5bcd2")

[node name="GroupPhotoResolution1080" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_be3s6")

[node name="FadeRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
libraries = {
"": SubResource("AnimationLibrary_plrt8")
}

[node name="FadeRect2" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="FadeRect2"]
libraries = {
"": SubResource("AnimationLibrary_2jj2k")
}

[node name="Button" type="Button" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_26vn8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2fbxi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lsngp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mkqiy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mb80y")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
